added change and stretched
also changed some small things for sonarlint